--- a/old-google.html
+++ b/old-google.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>1998 Feb 8 Google</title>
+    <title>Google 8 Feb 1999</title>
   </head>
   <body>
-
+    <center><img src="https://web.archive.org/web/19990208004515im_/http://www.google.com/google.jpg" alt="Google Beta Logo"> </center>
   </body>
 </html>
