--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <h1>Hello World<h1>
 <h2>Links to different pages</h2>
-<a href="old-google.html">Recreating 1998 Google page</a>
-<br/>
+<a href="old-google.html">Recreating 1998 Google page</a><br>
 <a href="404.html">404 test</a>
