--- a/old-google.html
+++ b/old-google.html
@@ -9,14 +9,14 @@
       <img src="https://web.archive.org/web/19990208004515im_/http://www.google.com/google.jpg" alt="Google Beta Logo">
     </center>
     <center>
-      <table border="0" width="90%">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#EEEEEE" colspan="3">
-              <form method="GET" action="/web/19990208004515/http://www.google.com/search">
+              <form>
                 <center>
                   Search the web using Google!<br>
-                  <input type="text" name="q" value="" size="40"><br>
+                  <input type="text"><br>
                   <input type="submit" value="Google Search">
                   <input type="submit" name="sa" value="I'm feeling lucky"><br>
                 </center>
