--- a/old-google.html
+++ b/old-google.html
@@ -18,35 +18,35 @@
                   Search the web using Google!<br>
                   <input type="text"><br>
                   <input type="submit" value="Google Search">
-                  <input type="submit" name="sa" value="I'm feeling lucky"><br>
+                  <input type="submit" value="I'm feeling lucky"><br>
                 </center>
               </form>
             </td>
           </tr>
           <tr>
-            <td width="37%" bgcolor="#7EE5DA">
+            <td width="33%" bgcolor="#7EE5DA">
               <center>
                 Special Searches<br>
-                <a href="/web/19990208004515/http://www.google.com/stanford">Stanford Search</a><br>
-                <a href="/web/19990208004515/http://www.google.com/linux">Linux Search</a><br>
+                <a href="link-to-outside.html"/web/19990208004515/http://www.google.com/stanford">Stanford Search</a><br>
+                <a href="link-to-outside.html">Linux Search</a><br>
               </center></td>
             <td bgcolor="#70CCC2"><center><font size="-1">
-              <a href="about.html">Why use Google!</a><br>
-              <a href="press.html">Press about Google!</a><br>
-              <a href="help.html">Help!</a><br>
-              <a href="company.html">Company Info</a><br>
-              <a href="jobs.html">Jobs at Google</a><br>
-              <a href="stickers.html">Google! Logos</a><br>
-              <a href="defaults.html">Making Google! the Default</a><br>
+              <a href="link-to-outside.html">Why use Google!</a><br>
+              <a href="link-to-outside.html">Press about Google!</a><br>
+              <a href="link-to-outside.html">Help!</a><br>
+              <a href="link-to-outside.html">Company Info</a><br>
+              <a href="link-to-outside.html">Jobs at Google</a><br>
+              <a href="link-to-outside.html">Google! Logos</a><br>
+              <a href="link-to-outside.html">Making Google! the Default</a><br>
             </font></center></td>
             <td align="right" bgcolor="#62B3AA"><center><font size="-1">
-              </font><form method="GET" action="https://web.archive.org/web/19990208004515/http://www.egroups.com/cgi-bin/subscribe.py"><font size="-1">
+              </font><form action="link-to-outside.html"><font size="-1">
               Get Google!<br>updates monthly:<br>
               <input type="hidden" name="listname" value="google-friends">
               <input type="text" name="emailaddr" value="your e-mail"><br>
               <input type="submit" name="SubmitAction" value="Subscribe">
               &nbsp;&nbsp;
-              <font size="-1"><a href="https://web.archive.org/web/19990208004515/http://www.egroups.com/list/google-friends/">Archive</a></font>
+              <font size="-1"><a href="link-to-outside.html">Archive</a></font>
             </font></form></center></td>
           </tr>
         </tbody>
