--- a/old-google.html
+++ b/old-google.html
@@ -27,7 +27,7 @@
             <td width="33%" bgcolor="#7EE5DA">
               <center>
                 Special Searches<br>
-                <a href="link-to-outside.html"/web/19990208004515/http://www.google.com/stanford">Stanford Search</a><br>
+                <a href="link-to-outside.html"</a><br>
                 <a href="link-to-outside.html">Linux Search</a><br>
               </center></td>
             <td bgcolor="#70CCC2"><center><font size="-1">
@@ -42,9 +42,9 @@
             <td align="right" bgcolor="#62B3AA"><center><font size="-1">
               </font><form action="link-to-outside.html"><font size="-1">
               Get Google!<br>updates monthly:<br>
-              <input type="hidden" name="listname" value="google-friends">
-              <input type="text" name="emailaddr" value="your e-mail"><br>
-              <input type="submit" name="SubmitAction" value="Subscribe">
+              <input value="google-friends">
+              <input value="your e-mail"><br>
+              <input value="Subscribe">
               &nbsp;&nbsp;
               <font size="-1"><a href="link-to-outside.html">Archive</a></font>
             </font></form></center></td>
